# vibe-code-ig-scraper-saas

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  add_sample_data.py  architecture.md  check_db.py  data_structure_refactoring_plan.md  django_dynamic_forms.md  django_template_migration_plan.md  docker-compose.yml  functional-requirements.md  geocoding-setup.md  geocoding-tests.md  geocoding-workflow-update.md  manage.py  multisource-payload-corrected.json  multisource-plan.md  mvp_plan.md  n8n_workflow.md  n8n_writing_plan.md  non-functional-requirements.md  poc_plan.md  pyproject.toml  roadmap.md  temp_page.html
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  task.md
core/: admin.py  auth_backends.py  forms.py  models.py  tests.py  utility_views.py  utils.py  views.py
core/migrations/: 0001_initial.py  0002_alter_location_post_url_alter_location_profile_url_and_more.py  0005_alter_run_output.py  (+19 more)
docs/: Minimal_Implementation_Plan.md  architecture.md  data_extraction_enrichment_implementation_plan.md  functional-requirements.md  geocoding-providers.md  multisource-plan.md  platform_configuration_requirements.md  playwright_fix.md  table_editor_requirements.md  table_editor_spec.md
n8n/: README.md
supabase/: config.toml
tests/: test_payload.json  test_payload_youtube_channel.json  test_payload_youtube_hashtag.json  test_payload_youtube_playlist.json  test_payload_youtube_search.json  test_payload_youtube_video.json  test_trigger.py  test_youtube_sources.py
vibe_scraper/: asgi.py  settings.py  urls.py  wsgi.py
(+119 files in other folders)
